# Chatbot-LoRA-RAG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Chatbot.ipynb  Dockerfile  Dockerfile.sagemaker  LICENSE  Makefile  README.md  gradio_vgj_chat.py  inference.py  pyproject.toml  requirements.sagemaker.txt  requirements.txt  serve.py  vgj_auto_dataset.jsonl
.github/workflows/: ci.yml
model/: README.md  meta.jsonl
scripts/: build_dataset.py  build_faiss.py  build_index.py  crawl.py  finetune.py  inference.py  merge_lora.py  run_pipeline.py
tests/: conftest.py  test_baseline.py  test_config.py  test_dataset.py  test_gradio.py  test_missing_model_dir.py  test_retrieval.py  test_retriever.py  test_text_utils.py  test_wheel_imports.py
vgj_chat/: __init__.py  cli.py  config.py
vgj_chat/data/: __init__.py  crawl.py  dataset.py  index.py  io.py
vgj_chat/models/: finetune.py  guards.py  rag.py
vgj_chat/models/rag/: __init__.py  baseline.py  boot.py  generation.py  retrieval.py
vgj_chat/ui/: gradio_app.py
vgj_chat/utils/: text.py
