[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vgj_chat"
version = "0.1.0"
description = "RAG chatbot using a LoRA adapted language model"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "gradio",
    "faiss-cpu",
    "sentence-transformers",
    "torch",
    "bitsandbytes",
    "peft",
    "datasets",
    "scikit-learn",
    "transformers",
    "nltk",
    "tqdm",
    "numpy",
    "aiohttp",
    "requests",
    "beautifulsoup4",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "pytest",
    "pre-commit",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
extend-exclude = [
  "archive",
  "scripts",
  "gradio_vgj_chat.py",
  "vgj_chat/data/*",
  "vgj_chat/models/*",
]

[tool.pytest.ini_options]
addopts = "-ra"
